initialise project : add fonts, colors, icons and internationalization

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,41 @@
+@font-face {
+  font-family: "Inter";
+  src: url("/fonts/Inter_24pt-Regular.ttf") format("truetype");
+  font-display: swap;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* Fonts */
+  --font-semibold-14px: normal 600 0.875rem "Inter", sans-serif;
+  --font-medium-13px: normal 500 0.8125rem "Inter", sans-serif;
+  --font-regular-12px: normal 400 0.75rem "Inter", sans-serif;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* Colors */
+  --color-highlight: #83d0ff;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --color-axe-x: #f87171;
+  --color-axe-y: #34d399;
+
+  --color-background: #262626;
+  --color-grid: #525252;
+  --color-mesh: #949697;
+
+  --color-vertex-default: #005cff;
+  --color-vertex-selected: #edf8ff;
+
+  --color-edge-default: #005cff;
+  --color-edge-selected: #edf8ff;
+
+  --color-face-default: #949697;
+  --color-face-selected: #6f87b1;
+
+  --color-neutral-high: #d4d4d4;
+  --color-neutral-medium: #737373;
+
+  --color-active-background: #0e285d;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  padding: 0;
 }
