--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,9 @@
   --color-neutral-medium: #737373;
   --color-neutral-lowest: #171717;
 
-  --color-active-background: #0e285d;
+  --color-components-nav-default-text: #a3a3a3;
+
+  --color-active-background: #404040;
 }
 
 * {
